--- a/dew.html
+++ b/dew.html
@@ -32,178 +32,307 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Dew | A new identity for a local restaurant</title>
+  <title>Dew | A new identity for a local eatery</title>
 
 </head>
 
 
-<body class="bg-dark">
+<body class="bg-white d-flex justify-content-center">
 
-  <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
-    style="max-width: 1000px;">
-    <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
-    </a>
+  <!--All Encompassing Content Div Start-->
+  <div style="width: 90%; max-width: 1000px">
 
-    <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
-    </a>
 
-    <div style="flex:1;">
-    </div>
+    <!--Hero Section Start-->
+    <div class="row pb-3 pb-sm-5 align-items-center">
 
-    <div class="" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item active px-5">
-          <a class="nav-link menu-link" href="index.html">Work
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link menu-link" href="about.html">About
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      <div class="col-12 col-sm-6 pe-5 pt-5 order-2 order-sm-1">
 
-  <div class="mx-auto px-3" style="max-width: 1000px;">
+        <p class="body-2" style="color: #32783B;"> A new identity for a local eatery </p>
 
-    <img src="Images/dew_heroImage.png" class="img-fluid py-5"
-      alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
+        <h1 class="header-1">Dew</h1>
 
-    <h1 class="header-1">
-      Dew
-    </h1>
+        <p class="body-1">Dew is a rebrand of a San Luis Obispo restaurant and art gallery
+          that highlights all things Central Coast. The previous identity was outdated,
+          inconsistent, and didn’t allow the business to reach the full potential that
+          comes with being located in the heart of downtown SLO.</p>
 
-    <div class="row">
-
-      <div class="col-12 col-sm-5 py-3">
-        <h4 class="header-4">
-          Skills
-        </h4>
-        <p class="body-2">
-          Brand Positioning / Logo Design / Identity Design
-        </p>
-        <h4 class="header-4">
-          Tools
-        </h4>
-        <p class="body-2">
-          Photoshop / Illustrator / InDesign
-        </p>
       </div>
 
-      <div class="col-2">
+
+      <div class="col-12 col-sm-6 order-1 order-sm-2">
+
+        <img src="Images/dew/website_2022_dew_heroImage.png"
+          alt="A close up shot of two wine glasses, each engraved with the Dew logo, during a toast at a lively, crowded table."
+          class="img-fluid">
+
       </div>
 
-      <div class="col-12 col-sm-5 py-3">
-        <p class="body-1">
-          Dew is a rebrand of a San Luis Obispo restaurant and art gallery that highlights
-          all things Central Coast
-        </p>
-      </div>
 
     </div>
+    <!--Hero Section End-->
 
-    <img src="Images/dew_logo.png" class="img-fluid py-5"
-      alt="The Dew logo superimposed over a photo of fresh lettuce.">
 
-    <div class="row">
-
-      <div class="col-12 col-sm-5 py-2">
-        <h2 class="header-2">
-          So What's the Deal?
-        </h2>
-        <p class="body-1">
-          The previous brand was outdated, inconsistent, and wasn't allowing the
-          restaurant to reach the full potential that comes with being located in the
-          heart of downtown San Luis Obispo.
-        </p>
-      </div>
-
-      <div class="col-2">
-      </div>
-
-      <div class="col-12 col-sm-5 py-2">
-        <h2 class="header-2">
-          Let's Fix It.
-        </h2>
-        <p class="body-1">
-          The new brand should clearly express the philosophy of bringing together the
-          best food, wine, art, and entertainment that the region has to offer.
-        </p>
-      </div>
-
-    </div>
-
-    <img src="Images/dew_businessSystem.png" class="img-fluid py-5"
-      alt="An envelope, two business cards, and a formal letter all containing the Dew logo and restaurant website, address, and phone number. The business card also includes the name, job, and email address of the restaurant owner.">
-
-    <div class="mx-auto" style="max-width: 700px;">
-      <p class="body-1">
-        The new visual language emphasizes the fresh food and friendly, inviting
-        atmosphere, establishing Dew as the go-to spot for Central Coast culture and
-        community.
-      </p>
+    <!--Skills/Tools Section Start-->
+    <div class="border mt-3">
     </div>
 
 
-    <img src="Images/dew_standardsManual.png" class="img-fluid"
-      alt="Three page spreads from the Dew brand standards manual: a spread outlining clear space for the logo, a section title spread with a vine pattern and the title "
-      identity system", and a spread depicting Dew's primary color palette of grass green,
-      chartreuse, sea foam blue, and pastel blue.">
+    <div class="row pt-4 pb-3 gy-3">
 
-    <img src="Images/dew_fliers.png" class="img-fluid"
-      alt="Two fliers for events at Dew. The first is for a featured artist, which shows a photo of a woman sitting on the floor of a gallery underneath the artist's name, a description of their work, and the dates their work will be shown at Dew. The second flier is for a wine tasting, which shows the date and time of the event, a short description of the event underneath a photo of wine glasses.">
-
-    <img src="Images/dew_menuMockup.png" class="img-fluid py-5"
-      alt="Three menus, one for breakfast, one for lunch and dinner, and a smaller dessert menu in the middle.">
+      <!--Left Space Block Desktop View-->
+      <div class="col-1 d-none d-sm-block">
+      </div>
 
 
-    <div class="border-top py-5 mt-3" color="#ffffff">
+      <div class="col-12 col-sm-5 d-flex">
+
+        <h4 class="header-4" style="width:75px">Skills</h4>
+
+        <div>
+
+          <p class="body-2" style="margin-bottom:8px">Brand Positioning</p>
+          <p class="body-2" style="margin-bottom:8px">Logo Design</p>
+          <p class="body-2" style="margin-bottom:8px">Visual Identity Design</p>
+
+        </div>
+
+
+      </div>
+
+
+      <div class="col-12 col-sm-6 d-flex">
+
+        <h4 class="header-4" style="width:75px">Tools</h4>
+
+        <div>
+
+          <p class="body-2" style="margin-bottom:8px">Adobe Photoshop</p>
+          <p class="body-2" style="margin-bottom:8px">Adobe Illustrator</p>
+          <p class="body-2" style="margin-bottom:8px">Adobe InDesign</p>
+
+        </div>
+
+
+      </div>
+
+
+    </div>
+
+
+    <div class="border mb-5">
+    </div>
+    <!--Skills/Tools Section End-->
+
+
+    <!--2 Col Content Section Start-->
+    <div class="row py-4 align-items-center">
+
+      <div class="col-12 col-sm-6">
+
+        <img src="Images/dew/website_2022_dew_menu.png"
+          alt="A Dew menu on a wooden table underneath a parfait dessert and two spoons."
+          class="img-fluid">
+
+      </div>
+
+
+      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+
+        <p class="body-3">Dew puts their mission front and center: bringing together the
+          best food, wine, art, and entertainment that the Central Coast has to offer.</p>
+
+      </div>
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--Animation Section Start-->
+    <div class="col-12 py-5">
+
+      <img src="Images/dew/website_2022_dew_logoMockup-01.png" alt="The Dew logo"
+        class="img-fluid" id="animated-image-1">
+
+    </div>
+    <!--Animation Section End-->
+
+
+    <!--Script Section Start-->
+    <script type="text/javascript">
+      var state = 1;
+      var image1 = document.getElementById("animated-image-1")
+
+      function changeState() {
+        if (state % 2 === 0) {
+          image1.src = "Images/dew/website_2022_dew_logoMockup-01.png"
+        } else if (state % 2 === 1) {
+          image1.src = "Images/dew/website_2022_dew_logoMockup-02.png"
+        }
+        state += 1
+      }
+      setInterval(changeState, [1250]);
+    </script>
+    <!--Script Section End-->
+
+
+    <!--Text Section Start-->
+    <div class="py-3 py-sm-5 mx-auto" style="max-width: 60%;">
+
+      <p class="body-3">The new logo visualizes Dew’s commitment to freshness and all
+        things local by combining the forms of a leaf, a dewdrop, and a coastline.</p>
+
+    </div>
+    <!--Text Section End-->
+
+
+    <!--Image Section Start-->
+    <div class="py-4">
+
+      <img src="Images/dew/website_2022_dew_businessSystemMockup.png"
+        alt="The front and back of an envelope, two business cards, a notebook, and a formal letter with Dew branding and company information on a wooden tabletop."
+        class="img-fluid" style="width: 100%;">
+
+    </div>
+    <!--Image Section End-->
+
+
+    <!--2 Col Content Section Start-->
+    <div class="row py-4 align-items-center">
+
+      <div class="col-12 col-sm-6 pe-5">
+
+        <p class="body-3">A bright visual language emphasizes the fresh food and friendly
+          atmosphere, establishing Dew as the go-to spot for Central Coast culture and
+          community.</p>
+
+      </div>
+
+
+      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+
+        <img src="Images/dew/website_2022_dew_shirtMockup.png"
+          alt="A folded white t-shirt decorated with the phrase “Central Coast Culture” and a vine graphic."
+          class="img-fluid">
+
+      </div>
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--2 Col Content Section Start-->
+    <div class="row py-4 align-items-center">
+
+      <div class="col-12 col-sm-6">
+
+        <img src="Images/dew/website_2022_dew_bagMockup.png"
+          alt="An off-white cloth shopping bag, decorated with the Dew logo and vine graphic, containing a loaf of bread, lettuce, and a wine bottle."
+          class="img-fluid">
+
+      </div>
+
+
+      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+
+        <img src="Images/dew/website_2022_dew_standardsManualMockup.png"
+          alt="A spiral-bound book titled “Dew Standards Manual” on a wooden table."
+          class="img-fluid">
+
+      </div>
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--Image Section Start-->
+    <div class="py-4">
+
+      <img src="Images/dew/website_2022_dew_flyerMockup.png"
+        alt="Two flyers for events at Dew: a gallery showing and a wine tasting. Each flyer contains information and images relevant to the event."
+        class="img-fluid" style="width: 100%;">
+
+    </div>
+    <!--Image Section End-->
+
+    <!--Text Section Start-->
+    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+
+      <p class="body-3">Events held in the restaurant and gallery space celebrate the
+        products of the Central Coast and the talents of the people who live there.</p>
+
+    </div>
+    <!--Text Section End-->
+
+
+    <!--Image Section Start-->
+    <div class="py-4">
+
+      <img src="Images/dew/website_2022_dew_signMockup.png"
+        alt="A circular sign containing the Dew logo mounted on the side of a building."
+        class="img-fluid" style="width: 100%;">
+
+    </div>
+    <!--Image Section End-->
+
+
+    <!-- More Projects Section Start -->
+    <div class="border mt-5">
+    </div>
+
+
+    <div class="py-5 mt-3" color="#ffffff">
+
       <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
 
-      <div class="row">
+      <div class="row pt-3">
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+        <div class="col-12 col-sm-4 mx-auto">
+
           <a href="calpolyracing.html">
-            <img class="img-fluid" src="Images/racing_homePage.png"
-              alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
+            <img class="img-fluid w-100"
+              src="Images/homePage/website_2022_homePage_thumbnailsCalPolyRacing.png"
+              alt="The Cal Poly Racing logo over a grey background.">
           </a>
+
         </div>
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+
+        <div class="col-12 col-sm-4 mx-auto py-4 py-sm-0">
+
           <a href="xvela.html">
-            <img class="img-fluid" src="Images/xvela_homePage.png"
-              alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors..">
+            <img class="img-fluid w-100"
+              src="Images/homePage/website_2022_homePage_thumbnailsXVELA.png"
+              alt="The XVELA logo over a bright blue background.">
           </a>
+
         </div>
 
-        <div class="project-link col-12 col-sm-3 mx-auto">
+
+        <div class="col-12 col-sm-4 mx-auto">
+
           <a href="36minutesoftype.html">
-            <img class="img-fluid" src="Images/36MinutesOfType_igArtboard-1.png"
+            <img class="img-fluid w-100"
+              src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
               alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
           </a>
+
         </div>
 
-      </div>
-    </div>
 
-    <div class="border-top py-5 mt-3" color="#ffffff">
-      <div class="col text-center">
-        <h1 class="header-1 pb-3">
-          Like what you see?
-        </h1>
-        <h3 class="header-3 pb-3">
-          Maybe we should work together!
-        </h3>
-        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
-          Me</a>
       </div>
+
+
     </div>
+    <!-- More Projects Section End -->
 
 
   </div>
+  <!--All Encompassing Content Div End-->
 
 </body>
