--- a/xvela.html
+++ b/xvela.html
@@ -38,81 +38,153 @@
 
 
 <body class="bg-white d-flex justify-content-center">
+
+  <!--All Encompassing Content Div Start-->
   <div style="width: 90%; max-width: 1000px">
 
+
+    <!--Hero Section Start-->
     <div class="row pb-3 pb-sm-5 align-items-center">
+
       <div class="col-12 col-sm-6 pe-5 pt-5 order-2 order-sm-1">
+
         <p class="body-2" style="color: #0055B8;"> Representing the world of maritime
           shipping </p>
+
         <h1 class="header-1">XVELA Icon Library</h1>
+
         <p class="body-1">I designed a set icons for XVELA, a company that creates
           cloud-based collaborative tools for the maritime shipping industry.</p>
+
       </div>
 
+
       <div class="col-12 col-sm-6 order-1 order-sm-2">
+
         <img src="Images/xvela/website_2022_xvela_hero.png"
           alt="A collection of XVELA icons arranged in a pile over a blue background."
           class="img-fluid">
-      </div>
-    </div>
 
+      </div>
+
+
+    </div>
+    <!--Hero Section End-->
+
+
+    <!--Skills/Tools Section Start-->
     <div class="border mt-3">
     </div>
 
+
     <div class="row pt-4 pb-3 gy-3">
+
+      <!--Left Space Block Desktop View-->
       <div class="col-1 d-none d-sm-block">
       </div>
+
+
       <div class="col-12 col-sm-5 d-flex">
+
         <h4 class="header-4" style="width:75px">Skills</h4>
+
         <div>
+
           <p class="body-2" style="margin-bottom:8px">Illustration</p>
           <p class="body-2" style="margin-bottom:8px">Iconography</p>
+
         </div>
+
+
       </div>
+
+
       <div class="col-12 col-sm-6 d-flex">
+
         <h4 class="header-4" style="width:75px">Tools</h4>
+
         <div>
+
           <p class="body-2" style="margin-bottom:8px">Adobe Illustrator</p>
+
         </div>
+
+
       </div>
+
+
     </div>
+
 
     <div class="border mb-5">
     </div>
+    <!--Skills/Tools Section End-->
 
+
+    <!--2 Col Content Section Start-->
     <div class="row py-4 align-items-center">
+
       <div class="col-12 col-sm-6">
+
         <img src="Images/xvela/website_2022_xvela_iconPhoto.png"
           alt="An assortment of XVELA icons over a blue-toned photo of a port."
           class="img-fluid">
+
       </div>
+
 
       <div class="col-12 col-sm-6 ps-5 pt-5 pt-sm-0">
+
         <p class="body-3">XVELA needed custom icons to illustrate complex shipping and
           software processes and add more personality to the brand.</p>
-      </div>
-    </div>
 
+      </div>
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--Animation Section Start-->
     <div class="row py-5">
+
       <div class="col-3">
+
         <img src="Images/xvela/website_2022_xvela_gifs_pineapplePhoto.png"
           alt="A pineapple." class="img-fluid" id="animated-image-1">
+
       </div>
+
+
       <div class="col-3">
+
         <img src="Images/xvela/website_2022_xvela_gifs_hatIcon.png"
           alt="An icon of a sailor’s hat." class="img-fluid" id="animated-image-2">
+
       </div>
+
+
       <div class="col-3">
+
         <img src="Images/xvela/website_2022_xvela_gifs_BinocularsPhoto.png"
           alt="A pair of binoculars." class="img-fluid" id="animated-image-3">
+
       </div>
+
+
       <div class="col-3">
+
         <img src="Images/xvela/website_2022_xvela_gifs_wheelIcon.png"
           alt="An icon of a ship’s steering wheel." class="img-fluid"
           id="animated-image-4">
-      </div>
-    </div>
 
+      </div>
+
+
+    </div>
+    <!--Animation Section End-->
+
+    <!--Script Section Start-->
     <script type="text/javascript">
       var state = 1;
       var image1 = document.getElementById("animated-image-1")
@@ -136,58 +208,98 @@
       }
       setInterval(changeState, [1250]);
     </script>
+    <!--Script Section End-->
 
+
+    <!--2 Col Content Section Start-->
     <div class="row py-4">
+
       <div class="col-12 col-sm-6 pb-4 pb-sm-0">
+
         <img src="Images/xvela/website_2022_xvela_website.png"
           alt="A computer displaying the icons alongside value propositions on XVELA’s website."
           class="img-fluid">
+
       </div>
+
+
       <div class="col-12 col-sm-6">
+
         <img src="Images/xvela/website_2022_xvela_twitter.png"
           alt="The top half of an iPhone displaying XVELA’s Twitter profile, where the icons are used as the cover image."
           class="img-fluid">
-      </div>
-    </div>
 
+      </div>
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--Text Section Start-->
     <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+
       <p class="body-3">The linear style of the icons evokes style of XVELA’s logotype and
         fits
         seamlessly within their existing identity.</p>
-    </div>
 
+    </div>
+    <!--Text Section End-->
+
+
+    <!--Image Section Start-->
     <div class="py-4">
+
       <img src="Images/xvela/website_2022_xvela_iconPhotoPanorama.png"
         alt="Three rows of XVELA icons, connected by lines, over a blue and orange-toned photo of a container ship at sea."
         class="img-fluid" style="width: 100%;">
-    </div>
 
+    </div>
+    <!--Image Section End-->
+
+
+    <!--Text Section Start-->
     <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+
       <p class="body-3">The icons represent XVELA’s
         values of
         collaboration, security, and
         organization,
         as well as material objects relevant to maritime shipping—think ships, ports,
         weather, and commodities.</p>
-    </div>
 
+    </div>
+    <!--Text Section End-->
+
+
+    <!--Image Section Start-->
     <div class="py-4">
+
       <img src="Images/xvela/website_2022_xvela_iconGrid.png"
         alt="Icons depicting a badge, a lightbulb, the sun behind a cloud, connected puzzle pieces, a compass, a calendar, a buoy, and a globe on alternating blue and orange backgrounds."
         class="img-fluid">
-    </div>
 
+    </div>
+    <!--Image Section End-->
+
+
+    <!--Image Section Start-->
     <div class="pb-5">
+
       <img src="Images/xvela/website_2022_xvela_fullIconLibrary.png"
         alt="The full icon library." class="img-fluid">
+
     </div>
+    <!--Image Section End-->
 
-    <!-- more projects section -->
 
+    <!--More Projects Section Start-->
     <div class="border mt-3">
     </div>
 
+
     <div class="py-5 mt-3" color="#ffffff">
+
       <h2 class="header-2 text-center pb-4">
         Looking for more?
       </h2>
@@ -195,33 +307,46 @@
       <div class="row pt-3">
 
         <div class="col-12 col-sm-4 mx-auto">
+
           <a href="36minutesoftype.html">
             <img class="img-fluid w-100"
               src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
               alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
           </a>
+
         </div>
 
+
         <div class="col-12 col-sm-4 mx-auto py-4 py-sm-0">
+
           <a href="grove.html">
             <img class="img-fluid w-100"
               src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
               alt="The Grove logo over a yellow background.">
           </a>
+
         </div>
 
+
         <div class="col-12 col-sm-4 mx-auto">
+
           <a href="loop.html">
             <img class="img-fluid w-100"
               src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
               alt="The Loop logo over and off-white background.">
           </a>
+
         </div>
 
-      </div>
-    </div>
 
+      </div>
+
+
+    </div>
+    <!--More Projects Section End-->
 
   </div>
+  <!--All Encompassing Content Div End-->
+
 
 </body>
