--- a/about.html
+++ b/about.html
@@ -37,36 +37,39 @@
 </head>
 
 
-<body class="bg-dark">
+<body class="bg-white d-flex justify-content-center">
 
-  <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
-    style="max-width: 1000px;">
-    <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
-    </a>
+  <div style="width: 90%; max-width: 1000px">
 
-    <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
-    </a>
+    <!--Nav Start-->
+    <nav
+      class="sticky-top bg-white py-4 d-flex justify-content-between align-items-center">
 
-    <div style="flex:1;">
-    </div>
+      <a href="index.html">
+        <img src="Images/website_2022_logo.png" alt="Sam Rogers." height="50px"
+          class="d-none d-md-block">
+        <img src="Images/website_2022_logo_small.png" alt="Sam Rogers." height="50px"
+          class="d-block d-md-none">
+      </a>
 
-    <div class="" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item active px-5">
-          <a class="nav-link menu-link" href="index.html">Work
+      <div class="d-flex align-items-center gap-4">
+        <a href="index.html" class="menu-link">
+          Work
+        </a>
+        <div class="px-2 border bg-white" style="position: relative; height: 24px">
+          <a href="about.html" class="menu-link bg-white px-1"
+            style="position: absolute; top: -5px">
+            About
           </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link menu-link" href="about.html">About
+          <a href="about.html" class="menu-link bg-white px-1">
+            About
           </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        </div>
 
-  <div class="mx-auto px-3" style="max-width: 1000px;">
+      </div>
+
+    </nav>
+    <!--Nav End-->
 
     <div class="row">
 
