--- a/index.html
+++ b/index.html
@@ -37,17 +37,23 @@
 
 </head>
 
+
+
 <body class="bg-white d-flex justify-content-center">
 
+  <!--All Encompassing Content Div Start-->
   <div style="width: 90%; max-width: 1000px">
 
+    <!--Nav Start-->
     <nav
       class="sticky-top bg-white py-4 d-flex justify-content-between align-items-center">
 
-      <img src="Images/website_2022_logo.png" alt="Sam Rogers." height="50px"
-        class="d-none d-md-block">
-      <img src="Images/website_2022_logo_small.png" alt="Sam Rogers." height="50px"
-        class="d-block d-md-none">
+      <a href="index.html">
+        <img src="Images/website_2022_logo.png" alt="Sam Rogers." height="50px"
+          class="d-none d-md-block">
+        <img src="Images/website_2022_logo_small.png" alt="Sam Rogers." height="50px"
+          class="d-block d-md-none">
+      </a>
 
       <div class="d-flex align-items-center gap-4">
         <div class="px-2 border bg-white" style="position: relative; height: 24px">
@@ -65,24 +71,283 @@
       </div>
 
     </nav>
+    <!--Nav End-->
 
+
+    <!--Project Section Start-->
+    <div class="row g-4 pb-5">
+
+      <!--Project Link Start-->
+      <a href="#" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
+            alt="The Grove logo over a yellow background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> Grove </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Coming Soon! </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="#" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+            alt="The Loop logo over an off-white background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> Loop </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Coming Soon! </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="lacroix.html" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsLaCroix.png"
+            alt="The rebranded LaCroix logo over a light blue background."
+            class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> LaCroix </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Branding </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="dew.html" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsDew.png"
+            alt="The Dew logo over a green background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> Dew </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Branding </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="#" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsCalPolyRacing.png"
+            alt="The Cal Poly Racing logo over a gray background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> Cal Poly Racing </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Coming Soon! </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="xvela.html" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsXVELA.png"
+            alt="The XVELA logo over a blue background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> XVELA </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Icon Library </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
+      <a href="#" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
+            alt="Sketches of the letters A through I arranged in a 3 by 3 square."
+            class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> 36 Minutes of Type </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Coming Soon! </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+    </div>
+    <!--Project Section End-->
+
+
+    <!--CTA Section Start-->
     <div class="border mt-3">
     </div>
 
-    <div class="py-5 mt-3" color="#000000">
-      <div class="col text-center">
+
+    <div class="py-5 mt-3 mb-5">
+
+      <div class=" col text-center">
+
         <h1 class="header-1 pb-3">
           Got a project in mind?
         </h1>
-        <h3 class="header-3 pb-3">
+
+        <p class="header-3 py-3">
           Let's build something cool together!
-        </h3>
-        <a href="mailto:srogersdesign27@gmail.com" class=" my-3">Email
-          Me</a>
+        </p>
+
+        <div class="pt-3 pb-5 mb-5">
+
+          <a href="mailto:srogersdesign27@gmail.com"
+            class="button border my-3 px-4 py-2">Email
+            Me</a>
+
+        </div>
+
+
       </div>
+
+
     </div>
+    <!--CTA Section End-->
+
+
+    <!--Folio Start
+    <div style="position: absolute; bottom: 0; background: Black">
+
+      <p class=" folio text-center pt-3">© 2022 Copyright Sam Rogers | This website does
+        not
+        collect
+        your information.
+      </p>
+
+    </div>
+    Folio End-->
+
 
   </div>
+  <!--All Encompassing Content Div End-->
 
 </body>
 
