--- a/xvela.html
+++ b/xvela.html
@@ -42,6 +42,28 @@
   <!--All Encompassing Content Div Start-->
   <div style="width: 90%; max-width: 1000px">
 
+    <!--Nav Start-->
+    <nav
+      class="sticky-top bg-white py-4 d-flex justify-content-between align-items-center">
+      <a href="index.html">
+        <img src="Images/website_2022_logo.png" alt="Sam Rogers." height="50px"
+          class="d-none d-md-block">
+        <img src="Images/website_2022_logo_small.png" alt="Sam Rogers." height="50px"
+          class="d-block d-md-none">
+      </a>
+
+      <div class="d-flex align-items-center gap-4">
+        <a href="index.html" class="menu-link">
+          Work
+        </a>
+        <a href="about.html" class="menu-link">
+          About
+        </a>
+      </div>
+
+    </nav>
+    <!--Nav End-->
+
 
     <!--Hero Section Start-->
     <div class="row pb-3 pb-sm-5 align-items-center">
@@ -304,37 +326,131 @@
         Looking for more?
       </h2>
 
-      <div class="row pt-3">
+      <div class="row g-4 pb-3">
 
-        <div class="col-12 col-sm-4 mx-auto">
+        <!--Project Link Start-->
+        <a href="#" class="col-12 col-sm-4">
 
-          <a href="36minutesoftype.html">
-            <img class="img-fluid w-100"
-              src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
-              alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
-          </a>
+          <div class="overlay-container">
 
-        </div>
+            <img src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
+              alt="Sketches of the letters A through I arranged in a 3 by 3 square."
+              class="overlay-image">
+
+            <div class="overlay">
+
+              <div class="overlay-text">
+
+                <p class="overlay-text-primary"> 36 Minutes of Type </p>
+
+                <hr class="overlay-divider mx-auto my-4">
+
+                <p class="overlay-text-secondary"> Coming Soon! </p>
+
+              </div>
 
 
-        <div class="col-12 col-sm-4 mx-auto py-4 py-sm-0">
-
-          <a href="grove.html">
-            <img class="img-fluid w-100"
-              src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
-              alt="The Grove logo over a yellow background.">
-          </a>
-
-        </div>
+            </div>
 
 
-        <div class="col-12 col-sm-4 mx-auto">
+          </div>
 
-          <a href="loop.html">
-            <img class="img-fluid w-100"
-              src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
-              alt="The Loop logo over and off-white background.">
-          </a>
+
+        </a>
+        <!--Project Link End-->
+
+
+        <!--Project Link Start-->
+        <a href="#" class="col-12 col-sm-4">
+
+          <div class="overlay-container">
+
+            <img src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
+              alt="The Grove logo over a yellow background." class="overlay-image">
+
+            <div class="overlay">
+
+              <div class="overlay-text">
+
+                <p class="overlay-text-primary"> Grove </p>
+
+                <hr class="overlay-divider mx-auto my-4">
+
+                <p class="overlay-text-secondary"> Coming Soon! </p>
+
+              </div>
+
+
+            </div>
+
+
+          </div>
+
+
+        </a>
+        <!--Project Link End-->
+
+
+        <!--Project Link Start-->
+        <a href="#" class="col-12 col-sm-4">
+
+          <div class="overlay-container">
+
+            <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+              alt="The Loop logo over an off-white background." class="overlay-image">
+
+            <div class="overlay">
+
+              <div class="overlay-text">
+
+                <p class="overlay-text-primary"> Loop </p>
+
+                <hr class="overlay-divider mx-auto my-4">
+
+                <p class="overlay-text-secondary"> Coming Soon! </p>
+
+              </div>
+
+
+            </div>
+
+
+          </div>
+
+
+        </a>
+        <!--Project Link End-->
+
+
+      </div>
+
+
+    </div>
+    <!--More Projects Section End-->
+
+
+    <!--CTA Section Start-->
+    <div class="border mt-3">
+    </div>
+
+
+    <div class="py-5 mt-3 mb-5">
+
+      <div class=" col text-center">
+
+        <h1 class="header-1 pb-3">
+          Got a project in mind?
+        </h1>
+
+        <p class="header-3 py-3">
+          Let's build something cool together!
+        </p>
+
+        <div class="pt-3 pb-5 mb-5">
+
+          <a href="mailto:srogersdesign27@gmail.com"
+            class="button border my-3 px-4 py-2">Email
+            Me</a>
 
         </div>
 
@@ -343,7 +459,8 @@
 
 
     </div>
-    <!--More Projects Section End-->
+    <!--CTA Section End-->
+
 
   </div>
   <!--All Encompassing Content Div End-->
