Added Grove (mostly)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="row g-4 pb-5">
 
       <!--Project Link Start-->
-      <a href="#" class="col-12 col-sm-6 col-md-4">
+      <a href="grove.html" class="col-12 col-sm-6 col-md-4">
 
         <div class="overlay-container">
 
@@ -93,7 +93,7 @@
 
               <hr class="overlay-divider mx-auto my-4">
 
-              <p class="overlay-text-secondary"> Coming Soon! </p>
+              <p class="overlay-text-secondary"> Branding </p>
 
             </div>
 
