--- a/xvela.html
+++ b/xvela.html
@@ -361,7 +361,7 @@
 
 
         <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
+        <a href="grove.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
@@ -376,7 +376,7 @@
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Coming Soon! </p>
+                <p class="overlay-text-secondary"> Branding </p>
 
               </div>
 
