New racing page yay

--- a/dew.html
+++ b/dew.html
@@ -315,7 +315,7 @@
       <div class="row g-4 pb-3">
 
         <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
+        <a href="calpolyracing.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
@@ -331,7 +331,7 @@
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Coming Soon! </p>
+                <p class="overlay-text-secondary"> Creative Direction </p>
 
               </div>
 
