--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
       <!--Project Link Start-->
-      <a href="#" class="col-12 col-sm-6 col-md-4">
+      <a href="calpolyracing.html" class="col-12 col-sm-6 col-md-4">
 
         <div class="overlay-container">
 
@@ -218,7 +218,7 @@
 
               <hr class="overlay-divider mx-auto my-4">
 
-              <p class="overlay-text-secondary"> Coming Soon! </p>
+              <p class="overlay-text-secondary"> Creative Direction </p>
 
             </div>
 
