--- a/xvela.html
+++ b/xvela.html
@@ -73,7 +73,7 @@
         <p class="body-2" style="color: #0055B8;"> Representing the world of maritime
           shipping </p>
 
-        <h1 class="header-1">XVELA Icon Library</h1>
+        <h1 class="header-1 pb-3">XVELA Icon Library</h1>
 
         <p class="body-1">I designed a set icons for XVELA, a company that creates
           cloud-based collaborative tools for the maritime shipping industry.</p>
