--- a/lacroix.html
+++ b/lacroix.html
@@ -373,7 +373,7 @@
 
 
         <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
+        <a href="calpolyracing.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
@@ -389,7 +389,7 @@
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Coming Soon! </p>
+                <p class="overlay-text-secondary"> Creative Direction </p>
 
               </div>
 
